# apac-data-foundation

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: decision-log.md  lineage.md
docs/metadata/: lta_bus_arrival.yaml
src/apac_data/: __init__.py  config.py  paths.py
src/apac_data/ingest/: __init__.py  guardrails.py  lta_bus_arrival.py
src/apac_data/pipelines/: check_quality.py  lta_bus_arrival.py
src/apac_data/quality/: __init__.py  lta_bus_arrival.py  schema.py
src/apac_data/transform/: __init__.py  lta_bus_arrival.py
tests/: test_data_quality_ci.py  test_lta_bus_arrival.py  test_smoke.py
tests/fixtures/: lta_bus_arrival_sample.json  lta_quality_contract.json
