[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apac-data-foundation"
version = "0.1.0"
description = "APAC open-data medallion lakehouse (Track B D1)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.1.0",
    "pandas>=2.2.0",
    "pyarrow>=18.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[project.scripts]
apac-lta-pipeline = "apac_data.pipelines.lta_bus_arrival:main"

[tool.hatch.build.targets.wheel]
packages = ["src/apac_data"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
